@@ -4,7 +4,6 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -41,7 +40,7 @@ public class BreadthFirstNodeTraversalTest {
 
     private List<String> findStages(TestNode head) {
         BreadthFirstNodeTraversal<TestNode> traversal = new BreadthFirstTestNodeTraversal();
-        traversal.start(Collections.singletonList(head));
+        traversal.start(List.of(head));
         return traversal.getStages();
     }
 
